Fri Sep  5 09:14:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c: Only declare start_rsh_server if we are going to
	define it (!NO_EXT_METHOD).

	* subr.c, cvs.h (check_numeric): New function.
	* admin.c (admin): Call it.
	* sanity.sh (admin): New tests admin-10a and admin-10b test for fix.

Thu Sep  4 15:55:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (binwrap2): New tests, test for the ability to specify
	all files are binary except certain patterns.

	* sanity.sh (modules3): New tests modules3-16 and modules3-17 test
	for another behavior involving '/' in a module name.

Sun Aug 31 12:03:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Remove checks for '/' in pathnames.
	(add): Move code which handles entries and repository inside loop,
	since these now might be different for each argument.  Add code to
	set finfo.update_dir, finfo.file, and finfo.fullname appropriately
	even if pathname contains '/'.  Replace user variable with
	finfo.file or finfo.fullname, depending on which is meant.  chdir
	into update_dir for each argument.  Likewise for the client code
	which creates directories.
	(add_directory): Replace arguments with a single finfo argument.
	Replace dir with finfo->fullname as needed.
	(add): Update call to add_directory.
	* client.c, client.h (send_a_repository): No longer static.
	* sanity.sh (errmsg2): Adjust tests to test for '/' in pathname.

	* sanity.sh (errmsg2): New tests errmsg2-13 through errmsg2-16
	test the status quo with respect to '/' in cvs add argument.

Sat Aug 30 17:37:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* run.c (run_popen): Add comment on return value.
	* release.c (release): Check for NULL return from popen.

Fri Aug 29 17:49:20 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (get_server_responses): Add comment about "ok^M".

Thu Aug 28 13:35:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
